make the second section

--- a/index.html
+++ b/index.html
@@ -20,10 +20,72 @@
 </head>
 
 <body>
+    <header class="bg-img min-vh-100 d-flex flex-column">
+        <nav>
+            <div class="container pt-20">
+                <div class="d-flex justify-content-between align-items-center">
+                    <div class="d-flex align-items-center gap-12 curser">
+                        <img src="./assets/img/png/nav-icon.png" alt="nav-icon">
+                        <h3 class="fw-4 fs-24 lh-27 m-0">maître d</h3>
+                    </div>
+                    <div class="d-flex gap-46">
+                        <a href="" class="fw-4 fs-16 lh-18 black">Home</a>
+                        <a href="" class="fw-4 fs-16 lh-18 black">Modules</a>
+                        <a href="" class="fw-4 fs-16 lh-18 black">Price</a>
+                        <a href="" class="fw-4 fs-16 lh-18 black">Features</a>
+                        <a href="" class="fw-4 fs-16 lh-18 black">Contact Us</a>
+                        <div><img src="./assets/img/png/search.png" alt="search"></div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <div class="container d-flex flex-column align-items-center justify-content-center flex-grow-1">
+            <h1 class="black fw-8 lh-72 fs-61 text-center heading">Maitre D – Store <br> Management for Barbers</h1>
+            <button class="fw-7 fs-20 lh-24 text-white submit-btn">Submit</button>
+        </div>
+    </header>
+
+    <main>
+        <section class="position-relative">
+            <div class="position-absolute over-img">
+                <img src="./assets/img/png/over-main-behind.png" alt="over-main-behind">
+            </div>
+            <div class="position-absolute behind">
+                <img src="./assets/img/png/main-behind.png" alt="main-behind">
+            </div>
+            <div class="container">
+                <div class="row align-items-center pt-200 justify-content-between">
+                    <div class="col-lg-5 col-12">
+                        <img src="./assets/img/png/sec-1-img.png" alt="sec-1-img" class="w-100">
+
+                    </div>
+                    <div class="col-lg-6 col-12">
+                        <div class="d-flex align-items-center gap-2">
+                            <h3 class="fs-16 lh-19 fw-6 m-0 text-color">About Us</h3>
+                            <div class="line"></div>
+                        </div>
+                        <div class="fw-7 fs-40 lh-45 mt-14">What is <span class="text-color"> Maître D?</span></div>
+                        <p class="fw-4 fs-16 lh-26 opacity-75 mt-12">Maître D is a full service solution, designed
+                            specifically for
+                            salons and
+                            barbershops. Our approach is modular, which
+                            means you only pay for the functionality that you need. Each module is completely integrated
+                            into the solution, so your
+                            entire business always remains syncronized. Maître D allows you to see everything within
+                            your business, from one
+                            location.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="bg-img"></section>
+    </main>
+    <footer>
+
+    </footer>
 
 
-
-    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
