update hover section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <link rel="stylesheet" href="./assets/css/style.css">
+
+    <link rel="shortcut icon" href="./assets/img/png/nav-icon.png">
 </head>
 
 <body>
@@ -112,7 +115,7 @@
                         D?</span> </h1>
 
                 <div class="row pt_121 align-items-center justify-content-center">
-                    <div class="col-lg-4 col-md-6 col-12 mt-3 position-relative">
+                    <div class="col-lg-4 col-md-6 col-12 mt-3 position-relative card-hover curser">
                         <div
                             class="min-h-293 shadow d-flex flex-column align-items-center justify-content-center py-18 rounded-2 card">
                             <div class="w_h_87"> <svg width="61" height="55" viewBox="0 0 61 55" fill="none"
@@ -132,7 +135,7 @@
                                     alt="ellips"></div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-12 mt-3 position-relative">
+                    <div class="col-lg-4 col-md-6 col-12 mt-3 position-relative card-hover curser">
                         <div
                             class="min-h-293 shadow d-flex flex-column align-items-center justify-content-center py-18 rounded-2 card">
                             <div class="w_h_87"> <svg width="43" height="52" viewBox="0 0 43 52" fill="none"
@@ -160,7 +163,7 @@
                                     alt="ellips"></div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-12 mt-3 position-relative">
+                    <div class="col-lg-4 col-md-6 col-12 mt-3 position-relative card-hover curser">
                         <div
                             class="min-h-293  shadow d-flex flex-column align-items-center justify-content-center py-18 rounded-2 card">
                             <div class="w_h_87"> <svg width="53" height="56" viewBox="0 0 53 56" fill="none"
@@ -707,7 +710,26 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-12"></div>
+                    <div class="col-lg-6 col-12 d-flex justify-content-center flex-column mt-3 ">
+                        <div class="min-h-171 w-100 position-relative d-flex premium-card curser">
+                            <div class="bubbel position-absolute"><img src="./assets/img/png/bubbel.png" alt="bubbel">
+                            </div>
+                            <div class="d-flex justify-content-between align-items-center w-100">
+                                <div class="d-flex flex-column pl_21 gap-11">
+                                    <div class="w-h-55 d-flex align-items-center justify-content-center  ">
+                                        <img src="./assets/img/svg/diamond.svg" alt="diamond">
+                                    </div>
+                                    <h2 class="white fw-6 fs-20 lh-23">Platinum</h2>
+                                </div>
+                                <div>
+                                    <p class="fw-6 fs-48 lh-24 white pr_25">$449<sup
+                                            class="fw-5 fs-14 lh-16 white">/Month</sup></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="d-flex"> <button class="submit-btn text-white fs-20 lh-24 fw-7">Buy Now</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
