--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                         <div class="shadow">
                             <div class="d-flex align-items-center justify-content-start pl_41 bg-gredint h-81 gap-23">
                                 <h3 class="white  fs-20 fw-6 lh-30">Monthly Pricing</h3>
-                                <div class="w_h_77-34">
+                                <div class="w_h_77-34 curser">
                                     <div class="w_h_27-27"></div>
                                 </div>
                                 <h3 class="white fs-20 fw-6 lh-30">Yearly Pricing</h3>
@@ -788,6 +788,14 @@
         <h4 class="fw-4 fs-14 lh-18 opacity-75 white text-center py_15">Copyright 2020 All rights reserved, Greenfox
             Development Pty Ltd©
         </h4>
+
+        <div class="to_top">
+            <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M19.0835 17.0007V33.6673H14.9168V17.0007H0.333496L17.0002 0.333984L33.6668 17.0007H19.0835Z"
+                    fill="white" />
+            </svg>
+
+        </div>
     </footer>
 
 
