make position img

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
                     </div>
                     <div class="col-lg-6 col-12">
-                        <div class="d-flex align-items-center gap-2">
+                        <div class="d-flex align-items-center gap-12">
                             <h3 class="fs-16 lh-19 fw-6 m-0 text-color">About Us</h3>
                             <div class="line"></div>
                         </div>
@@ -104,9 +104,15 @@
 
         <!--------- Features ------------>
 
-        <section class="bg-img-2 pt_217">
-            <div class="container_feature">
-                <div class="d-flex align-items-center justify-content-center">
+        <section class="bg-img-2 pt_217 position-relative">
+            <div class="feature-box">
+                <img src="./assets/img/png/purpel-box.png" alt="purpel-box">
+            </div>
+            <div class="container_feature position-relative">
+                <div class="features-cross">
+                    <img src="./assets/img/png/cross-img.png" alt="cross-img">
+                </div>
+                <div class="d-flex align-items-center justify-content-center gap-12">
                     <h3 class="text-color m-0 fw-6 fs-16 lh-18">Features</h3>
                     <div class="line"></div>
                 </div>
@@ -192,7 +198,7 @@
 
         <section class="pt_169 overflow-hidden position-relative">
             <div class="container">
-                <div class="d-flex align-items-center justify-content-center">
+                <div class="d-flex align-items-center justify-content-center gap-12">
                     <h3 class="text-color m-0 fw-6 fs-16 lh-18">Modules</h3>
                     <div class="line"></div>
                 </div>
@@ -202,7 +208,10 @@
                 </h1>
 
                 <div class="slider-slider">
-                    <div class="container_module shadow">
+                    <div class="container_module shadow position-relative">
+                        <div class="module-cross">
+                            <img src="./assets/img/png/cross-img.png" alt="cross-img">
+                        </div>
                         <div class="row mt_78 justify-content-between">
                             <div class="col-lg-6 col-12 mt_12">
                                 <img src="./assets/img/png/slider-img.png" alt="slider-img" class="w-100 h-100">
@@ -234,7 +243,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="container_module shadow">
+                    <div class="container_module shadow position-relative">
+                        <div class="module-cross">
+                            <img src="./assets/img/png/cross-img.png" alt="cross-img">
+                        </div>
                         <div class="row mt_78 justify-content-between">
 
                             <div
@@ -268,7 +280,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="container_module shadow">
+                    <div class="container_module shadow position-relative">
+                        <div class="module-cross">
+                            <img src="./assets/img/png/cross-img.png" alt="cross-img">
+                        </div>
                         <div class="row mt_78 justify-content-between">
                             <div class="col-lg-6 col-12 mt_12">
                                 <img src="./assets/img/png/slider-img.png" alt="slider-img" class="w-100 h-100">
@@ -300,7 +315,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="container_module shadow">
+                    <div class="container_module shadow position-relative">
+                        <div class="module-cross">
+                            <img src="./assets/img/png/cross-img.png" alt="cross-img">
+                        </div>
                         <div class="row mt_78 justify-content-between">
 
                             <div
@@ -334,7 +352,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="container_module shadow">
+                    <div class="container_module shadow position-relative">
+                        <div class="module-cross">
+                            <img src="./assets/img/png/cross-img.png" alt="cross-img">
+                        </div>
                         <div class="row mt_78 justify-content-between">
                             <div class="col-lg-6 col-12 mt_12">
                                 <img src="./assets/img/png/slider-img.png" alt="slider-img" class="w-100 h-100">
@@ -366,7 +387,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="container_module shadow">
+                    <div class="container_module shadow position-relative">
+                        <div class="module-cross">
+                            <img src="./assets/img/png/cross-img.png" alt="cross-img">
+                        </div>
                         <div class="row mt_78 justify-content-between">
 
                             <div
@@ -400,7 +424,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="container_module shadow">
+                    <div class="container_module shadow position-relative">
+                        <div class="module-cross">
+                            <img src="./assets/img/png/cross-img.png" alt="cross-img">
+                        </div>
                         <div class="row mt_78 justify-content-between">
                             <div class="col-lg-6 mt_12 col-12">
                                 <img src="./assets/img/png/slider-img.png" alt="slider-img" class="w-100 h-100">
@@ -432,7 +459,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="container_module shadow">
+                    <div class="container_module shadow position-relative">
+                        <div class="module-cross">
+                            <img src="./assets/img/png/cross-img.png" alt="cross-img">
+                        </div>
                         <div class="row mt_78 justify-content-between">
 
                             <div
@@ -506,9 +536,13 @@
         </section>
 
         <!--------- pricing----------->
+
         <section class="mt_191">
-            <div class="container">
-                <div class="d-flex align-items-center justify-content-center">
+            <div class="container position-relative">
+                <div class="pricing-cross">
+                    <img src="./assets/img/png/cross-img.png" alt="cross-img">
+                </div>
+                <div class="d-flex align-items-center justify-content-center gap-12">
                     <h3 class="text-color m-0 fw-6 fs-16 lh-18">Pricing</h3>
                     <div class="line"></div>
                 </div>
@@ -737,10 +771,13 @@
 
         <!------ contact-us ------->
         <section class="pt_368">
-            <div class="container">
+            <div class="container position-relative">
+                <div class="contact-blue-box">
+                    <img src="./assets/img/png/purpel-box.png" alt="purpel-box">
+                </div>
                 <div class="row flex-reverse">
                     <div class="col-lg-6 col-12">
-                        <div class="d-flex align-items-center">
+                        <div class="d-flex align-items-center gap-12">
                             <h3 class="text-color m-0 fw-6 fs-16 lh-18">Contact us</h3>
                             <div class="line"></div>
                         </div>
