make body overflow hidden on menubar open

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </path>
             </svg>
         </div>
-        <h1 class=" white fs-80 fw-8">Maitre D...</h1>
+        <h1 class=" white fs-80 fw-8 text-center">Maitre D...</h1>
     </section>
     <header class="bg-img min-vh-100 d-flex flex-column ">
         <nav>
@@ -63,11 +63,11 @@
                     </label>
                     <div class="gap-46 d-flex">
                         <div class="d-flex gap-46 lg-screen">
-                            <a href="" class="fw-4 fs-16 lh-18 black nav-link">Home</a>
-                            <a href="" class="fw-4 fs-16 lh-18 black nav-link">Modules</a>
-                            <a href="" class="fw-4 fs-16 lh-18 black nav-link">Price</a>
-                            <a href="" class="fw-4 fs-16 lh-18 black nav-link">Features</a>
-                            <a href="" class="fw-4 fs-16 lh-18 black nav-link">Contact Us</a>
+                            <a href="#home" class="fw-4 fs-16 lh-18 black nav-link">Home</a>
+                            <a href="#module" class="fw-4 fs-16 lh-18 black nav-link">Modules</a>
+                            <a href="#price" class="fw-4 fs-16 lh-18 black nav-link">Price</a>
+                            <a href="#features" class="fw-4 fs-16 lh-18 black nav-link">Features</a>
+                            <a href="#contact" class="fw-4 fs-16 lh-18 black nav-link">Contact Us</a>
                         </div>
                         <div class="curser search-icon"><img src="./assets/img/png/search.png" alt="search"></div>
                         <!-- <input type="search" placeholder="search-here"> -->
@@ -91,7 +91,7 @@
 
     <main>
         <!------------- About us---------- -->
-        <section class="position-relative ">
+        <section class="position-relative " id="home">
             <div class="position-absolute over-img w-100">
                 <img src="./assets/img/png/over-main-behind.png" alt="over-main-behind" class="w-100">
             </div>
@@ -129,7 +129,7 @@
 
         <!--------- Features ------------>
 
-        <section class="bg-img-2 pt_217 position-relative">
+        <section class="bg-img-2 pt_217 position-relative" id="features">
             <div class="feature-box">
                 <img src="./assets/img/png/purpel-box.png" alt="purpel-box">
             </div>
@@ -221,7 +221,7 @@
 
         <!-------- Modules-------->
 
-        <section class="pt_169 overflow-hidden position-relative">
+        <section class="pt_169 overflow-hidden position-relative" id="module">
             <div class="container">
                 <div class="d-flex align-items-center justify-content-center gap-12">
                     <h3 class="text-color m-0 fw-6 fs-16 lh-18">Modules</h3>
@@ -254,7 +254,8 @@
                                     wait times, costs and will allow them
                                     to even select their preferred stylist.
                                 </p>
-                                <p class="fs-16 fw-4 lh-24 mt_21 text_center">As the queue gets bigger or smaller, its
+                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger
+                                    or smaller, its
                                     easy to
                                     monitor
                                     your operations and understand when wait periods are getting
@@ -288,7 +289,7 @@
                                     wait times, costs and will allow them
                                     to even select their preferred stylist.
                                 </p>
-                                <p class="fs-16 fw-4 lh-24 mt_21 text_center">As the queue gets bigger or smaller, its
+                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger or smaller, its
                                     easy to
                                     monitor
                                     your operations and understand when wait periods are getting
@@ -326,7 +327,7 @@
                                     wait times, costs and will allow them
                                     to even select their preferred stylist.
                                 </p>
-                                <p class="fs-16 fw-4 lh-24 mt_21 text_center">As the queue gets bigger or smaller, its
+                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger or smaller, its
                                     easy to
                                     monitor
                                     your operations and understand when wait periods are getting
@@ -360,7 +361,7 @@
                                     wait times, costs and will allow them
                                     to even select their preferred stylist.
                                 </p>
-                                <p class="fs-16 fw-4 lh-24 mt_21 text_center">As the queue gets bigger or smaller, its
+                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger or smaller, its
                                     easy to
                                     monitor
                                     your operations and understand when wait periods are getting
@@ -398,7 +399,7 @@
                                     wait times, costs and will allow them
                                     to even select their preferred stylist.
                                 </p>
-                                <p class="fs-16 fw-4 lh-24 mt_21 text_center">As the queue gets bigger or smaller, its
+                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger or smaller, its
                                     easy to
                                     monitor
                                     your operations and understand when wait periods are getting
@@ -432,7 +433,7 @@
                                     wait times, costs and will allow them
                                     to even select their preferred stylist.
                                 </p>
-                                <p class="fs-16 fw-4 lh-24 mt_21 text_center">As the queue gets bigger or smaller, its
+                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger or smaller, its
                                     easy to
                                     monitor
                                     your operations and understand when wait periods are getting
@@ -470,7 +471,7 @@
                                     wait times, costs and will allow them
                                     to even select their preferred stylist.
                                 </p>
-                                <p class="fs-16 fw-4 lh-24 mt_21 text_center">As the queue gets bigger or smaller, its
+                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger or smaller, its
                                     easy to
                                     monitor
                                     your operations and understand when wait periods are getting
@@ -504,7 +505,7 @@
                                     wait times, costs and will allow them
                                     to even select their preferred stylist.
                                 </p>
-                                <p class="fs-16 fw-4 lh-24 mt_21 text_center">As the queue gets bigger or smaller, its
+                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger or smaller, its
                                     easy to
                                     monitor
                                     your operations and understand when wait periods are getting
@@ -562,30 +563,30 @@
 
         <!--------- pricing----------->
 
-        <section class="mt_191">
+        <section class="mt_191" id="price">
             <div class="container position-relative">
                 <div class="pricing-cross">
                     <img src="./assets/img/png/cross-img.png" alt="cross-img">
                 </div>
                 <div class="d-flex align-items-center justify-content-center gap-12">
-                    <h3 class="text-color m-0 fw-6 fs-16 lh-18">Pricing</h3>
+                    <h3 class="text-color m-0 fw-6 fs-16 lh-18 sm-fs-14">Pricing</h3>
                     <div class="line"></div>
                 </div>
-                <h1 class="fw-7 fs-40 lh-45 letter-spacing text-center mt-9 md-fs-36 mb_142">Simple pricing for <span
-                        class="text-color">everyone</span>
+                <h1 class="fw-7 fs-40 lh-45 letter-spacing text-center mt-9 md-fs-36 mb_142 sm-fs-14">Simple pricing for
+                    <span class="text-color">everyone</span>
                 </h1>
                 <div class="row">
                     <div class="col-lg-6 col-12">
                         <div class="shadow">
                             <div class="d-flex align-items-center justify-content-start pl_41 bg-gredint h-81 gap-23">
-                                <h3 class="white  fs-20 fw-6 lh-30">Monthly Pricing</h3>
+                                <h3 class="white  fs-20 fw-6 lh-30 sm-fs-14">Monthly Pricing</h3>
                                 <div class="w_h_77-34 curser">
                                     <div class="w_h_27-27"></div>
                                 </div>
-                                <h3 class="white fs-20 fw-6 lh-30">Yearly Pricing</h3>
+                                <h3 class="white fs-20 fw-6 lh-30 sm-fs-14">Yearly Pricing</h3>
                             </div>
                             <div class="d-flex justify-content-between pt_35 py_41 pb_29 click-box">
-                                <h3 class="fw-4 fs-20 lh-24 opacity-75">Queue Management</h3>
+                                <h3 class="fw-4 fs-20 lh-24 opacity-75 sm-fs-14">Queue Management</h3>
                                 <span class="check-img">
                                     <svg width="17" height="17" viewBox="0 0 17 17" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -608,7 +609,7 @@
                             </div>
 
                             <div class="d-flex justify-content-between py_41 pb_29 click-box">
-                                <h3 class="fw-4 fs-20 lh-24 opacity-75">Point of Sale</h3>
+                                <h3 class="fw-4 fs-20 lh-24 opacity-75 sm-fs-14">Point of Sale</h3>
                                 <span class="check-img">
                                     <svg width="17" height="17" viewBox="0 0 17 17" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -631,7 +632,7 @@
                             </div>
                             <div class="d-flex justify-content-between
                              py_41 pb_29 click-box">
-                                <h3 class="fw-4 fs-20 lh-24 opacity-75">Barber Management</h3>
+                                <h3 class="fw-4 fs-20 lh-24 opacity-75 sm-fs-14">Barber Management</h3>
                                 <span class="check-img">
                                     <svg width="17" height="17" viewBox="0 0 17 17" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -654,7 +655,7 @@
                             </div>
                             <div class="d-flex justify-content-between
                              py_41 pb_29 click-box">
-                                <h3 class="fw-4 fs-20 lh-24 opacity-75">Customer Database</h3>
+                                <h3 class="fw-4 fs-20 lh-24 opacity-75 sm-fs-14">Customer Database</h3>
                                 <span class="check-img">
                                     <svg width="17" height="17" viewBox="0 0 17 17" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -677,7 +678,7 @@
                             </div>
                             <div class="d-flex justify-content-between
                              py_41 pb_29 click-box">
-                                <h3 class="fw-4 fs-20 lh-24 opacity-75">Timesheets</h3>
+                                <h3 class="fw-4 fs-20 lh-24 opacity-75 sm-fs-14">Timesheets</h3>
                                 <span class="check-img">
                                     <svg width="17" height="17" viewBox="0 0 17 17" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -700,7 +701,7 @@
                             </div>
                             <div class="d-flex justify-content-between
                              py_41 pb_29 click-box">
-                                <h3 class="fw-4 fs-20 lh-24 opacity-75">Pricing Management</h3>
+                                <h3 class="fw-4 fs-20 lh-24 opacity-75 sm-fs-14">Pricing Management</h3>
                                 <span class="check-img">
                                     <svg width="17" height="17" viewBox="0 0 17 17" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -723,7 +724,7 @@
                             </div>
                             <div class="d-flex justify-content-between
                              py_41 pb_29 click-box">
-                                <h3 class="fw-4 fs-20 lh-24 opacity-75">Inventory Management</h3>
+                                <h3 class="fw-4 fs-20 lh-24 opacity-75 sm-fs-14">Inventory Management</h3>
                                 <span class="check-img">
                                     <svg width="17" height="17" viewBox="0 0 17 17" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -746,7 +747,7 @@
                             </div>
                             <div class="d-flex justify-content-between
                              py_41 pb_29 click-box">
-                                <h3 class="fw-4 fs-20 lh-24 opacity-75">Analytics and Reporting</h3>
+                                <h3 class="fw-4 fs-20 lh-24 opacity-75 sm-fs-14">Analytics and Reporting</h3>
                                 <span class="check-img">
                                     <svg width="17" height="17" viewBox="0 0 17 17" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -795,7 +796,7 @@
 
 
         <!------ contact-us ------->
-        <section class="pt_368">
+        <section class="pt_368" id="contact">
             <div class="container position-relative">
                 <div class="contact-blue-box">
                     <img src="./assets/img/png/purpel-box.png" alt="purpel-box">
