adjuct the space

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
         <!-------- Modules-------->
 
-        <section class="pt_169 overflow-hidden position-relative" id="module">
+        <section class="pt_169 overflow-hidden position-relative trans-none" id="module">
             <div class="container">
                 <div class="d-flex align-items-center justify-content-center gap-12">
                     <h3 class="text-color m-0 fw-6 fs-16 lh-18">Modules</h3>
@@ -289,7 +289,8 @@
                                     wait times, costs and will allow them
                                     to even select their preferred stylist.
                                 </p>
-                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger or smaller, its
+                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger
+                                    or smaller, its
                                     easy to
                                     monitor
                                     your operations and understand when wait periods are getting
@@ -327,7 +328,8 @@
                                     wait times, costs and will allow them
                                     to even select their preferred stylist.
                                 </p>
-                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger or smaller, its
+                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger
+                                    or smaller, its
                                     easy to
                                     monitor
                                     your operations and understand when wait periods are getting
@@ -361,7 +363,8 @@
                                     wait times, costs and will allow them
                                     to even select their preferred stylist.
                                 </p>
-                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger or smaller, its
+                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger
+                                    or smaller, its
                                     easy to
                                     monitor
                                     your operations and understand when wait periods are getting
@@ -399,7 +402,8 @@
                                     wait times, costs and will allow them
                                     to even select their preferred stylist.
                                 </p>
-                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger or smaller, its
+                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger
+                                    or smaller, its
                                     easy to
                                     monitor
                                     your operations and understand when wait periods are getting
@@ -433,7 +437,8 @@
                                     wait times, costs and will allow them
                                     to even select their preferred stylist.
                                 </p>
-                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger or smaller, its
+                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger
+                                    or smaller, its
                                     easy to
                                     monitor
                                     your operations and understand when wait periods are getting
@@ -471,7 +476,8 @@
                                     wait times, costs and will allow them
                                     to even select their preferred stylist.
                                 </p>
-                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger or smaller, its
+                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger
+                                    or smaller, its
                                     easy to
                                     monitor
                                     your operations and understand when wait periods are getting
@@ -505,7 +511,8 @@
                                     wait times, costs and will allow them
                                     to even select their preferred stylist.
                                 </p>
-                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger or smaller, its
+                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger
+                                    or smaller, its
                                     easy to
                                     monitor
                                     your operations and understand when wait periods are getting
@@ -848,7 +855,7 @@
 
         </div>
         <div class="underline"></div>
-        <h4 class="fw-4 fs-14 lh-18 opacity-75 white text-center py_15">Copyright 2020 All rights reserved, Greenfox
+        <h4 class="fw-4 fs-14 lh-18 opacity-75 white text-center py_15 m-0">Copyright 2020 All rights reserved, Greenfox
             Development Pty Ltd©
         </h4>
 
